// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of segmented list 1`] = `
<div
  className="mui-segmented-list"
>
  <ul
    className="mui-segmented-list-ul"
  />
</div>
`;

exports[`Segmented list with items 1`] = `
<div
  className="mui-segmented-list"
>
  <ul
    className="mui-segmented-list-ul"
  >
    <li
      className="list-item"
    >
      Foo
    </li>
    <li
      className="list-item"
    >
      Bar
    </li>
    <li
      className="list-item"
    >
      Baz
    </li>
  </ul>
</div>
`;

exports[`Segmented list with title 1`] = `
<div
  className="mui-segmented-list"
>
  <div
    className="title-container"
  >
    <h2
      className="title"
    >
      Test
    </h2>
  </div>
  <ul
    className="mui-segmented-list-ul"
  />
</div>
`;
